thunar-179: ensure we are not able to add duplicate names

--- a/plugins/thunar-uca/thunar-uca-editor.ui
+++ b/plugins/thunar-uca/thunar-uca-editor.ui
@@ -67,6 +67,7 @@
                     <property name="hexpand">True</property>
                     <property name="activates_default">True</property>
                     <signal name="changed" handler="thunar_uca_editor_set_content_modified" swapped="yes"/>
+                    <signal name="changed" handler="thunar_uca_editor_name_updated" swapped="yes"/>
                   </object>
                   <packing>
                     <property name="left_attach">1</property>
