--- a/plugins/thunar-uca/thunar-uca-chooser.ui
+++ b/plugins/thunar-uca/thunar-uca-chooser.ui
@@ -28,7 +28,10 @@
             </child>
             <child>
               <object class="GtkLabel">
-                <property name="label" translatable="yes">You can configure custom actions that will appear in the file managers context menus for certain kinds of files.</property>
+                <property name="label" translatable="yes">You can configure custom actions that will appear in the file managers context menus for certain kinds of files.
+
+Visit the &lt;a href="https://docs.xfce.org/xfce/thunar/custom-actions"&gt;thunar wiki&lt;/a&gt; for a collection of widely used custom actions.</property>
+                <property name="use-markup">True</property>
                 <property name="xalign">0.0</property>
                 <property name="yalign">0.5</property>
                 <property name="visible">TRUE</property>
