anchor 'info' icon on top

--- a/plugins/thunar-uca/thunar-uca-chooser.ui
+++ b/plugins/thunar-uca/thunar-uca-chooser.ui
@@ -24,6 +24,7 @@
                 <property name="icon-name">dialog-information</property>
                 <property name="icon-size">5</property>
                 <property name="visible">TRUE</property>
+                <property name="yalign">0.0</property>
               </object>
             </child>
             <child>
