--- a/plugins/thunar-uca/thunar-uca-chooser.ui
+++ b/plugins/thunar-uca/thunar-uca-chooser.ui
@@ -31,7 +31,7 @@
               <object class="GtkLabel">
                 <property name="label" translatable="yes">You can configure custom actions that will appear in the file managers context menus for certain kinds of files.
 
-Check the &lt;a href="https://docs.xfce.org/xfce/thunar/custom-actions"&gt;Thunar documentation&lt;/a&gt; for a collection of widely used custom actions.</property>
+Check the &lt;a href="https://docs.xfce.org/xfce/thunar/custom-actions"&gt;documentation&lt;/a&gt; for a collection of custom action samples.</property>
                 <property name="use-markup">True</property>
                 <property name="xalign">0.0</property>
                 <property name="yalign">0.5</property>
