--- a/plugins/thunar-uca/thunar-uca-chooser.ui
+++ b/plugins/thunar-uca/thunar-uca-chooser.ui
@@ -24,11 +24,15 @@
                 <property name="icon-name">dialog-information</property>
                 <property name="icon-size">5</property>
                 <property name="visible">TRUE</property>
+                <property name="yalign">0.0</property>
               </object>
             </child>
             <child>
               <object class="GtkLabel">
-                <property name="label" translatable="yes">You can configure custom actions that will appear in the file managers context menus for certain kinds of files.</property>
+                <property name="label" translatable="yes">You can configure custom actions that will appear in the file managers context menus for certain kinds of files.
+
+Check the &lt;a href="https://docs.xfce.org/xfce/thunar/custom-actions"&gt;documentation&lt;/a&gt; for a collection of custom action samples.</property>
+                <property name="use-markup">True</property>
                 <property name="xalign">0.0</property>
                 <property name="yalign">0.5</property>
                 <property name="visible">TRUE</property>
