Clean up the string splitting logic
Being away from C for too long made me worry about going past the end of
a null-terminated vector.

Signed-off-by: Connor Behan <connor.behan@gmail.com>

--- a/plugins/thunar-uca/thunar-uca-editor.ui
+++ b/plugins/thunar-uca/thunar-uca-editor.ui
@@ -643,7 +643,7 @@
                   <object class="GtkEntry" id="range_entry">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
-                    <property name="tooltip_text" translatable="yes">If the command should operate on say two or three files, enter the numerical range 2-3. If there are no limits, this string should be anything without the - delimiter.</property>
+                    <property name="tooltip_text" translatable="yes">If the command should operate on say two or three files, enter the numerical range 2-3. If there are no limits, this string should be empty.</property>
                     <property name="hexpand">True</property>
                     <property name="activates_default">True</property>
                     <property name="text" translatable="yes">*</property>
